# talc

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  argParser.cpp  argParser.h  bar.cpp  commit.cpp  commit.h  github.cpp  github.h  main.cpp  repo.cpp  repo.h  talc  talcutil.cpp  talcutil.h  time.cpp  time.h
src/: bar.h  github.cpp  github.h  main.cpp  main.rs  repo.cpp  repo.h
